--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="remote-controller/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <meta http-equiv="refresh" content="0; URL=/katpat/documentation/index.html" />
+    <meta http-equiv="refresh" content="0; URL=https://kaelhem.github.io/katpat/documentation/index.html" />
     <title>Katpat</title>
   </head>
   <body>Nothing here</body>
