--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="remote-controller/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <meta http-equiv="refresh" content="0; URL=https://kaelhem.github.io/katpat/documentation/index.html" />
+    <meta http-equiv="refresh" content="0; URL=https://github.com/kaelhem/katpat" />
     <title>Katpat</title>
   </head>
-  <body>Nothing here</body>
+  <body></body>
 </html>
